Se corrigen algunos estilos y se realiza la tienda desde el html y css

--- a/index.html
+++ b/index.html
@@ -341,17 +341,17 @@
                 <div class="separador__categoria"></div>
             </article>
             <div class="categorias__contenedor-componentes">
-                <a href="" class="conponent-categoria" id="casual">
+                <a href="./tienda.html" class="conponent-categoria" id="casual">
                     <div class="conponent-categoria__gradient">
                         <h3 class="conponent-categoria__text">Casual</h3>
                     </div>
                 </a>
-                <a href="" class="conponent-categoria" id="formal">
+                <a href="./tienda.html" class="conponent-categoria" id="formal">
                     <div class="conponent-categoria__gradient">
                         <h3 class="conponent-categoria__text">Formal</h3>
                     </div>
                 </a>
-                <a href="" class="conponent-categoria" id="deportivo">
+                <a href="./tienda.html" class="conponent-categoria" id="deportivo">
                     <div class="conponent-categoria__gradient">
                         <h3 class="conponent-categoria__text">Deportivo</h3>
                     </div>
