--- a/tienda.html
+++ b/tienda.html
@@ -310,51 +310,179 @@
     <!-- Start main  store -->
 
     <main>
+        <section class="inicio">
+            <figure class="banner"></figure>
 
-        <figure class="banner">
-            <img src="./assets/img/tienda.jpg" alt="">
-        </figure>
+            <h1 class="productosTitle">CATEGORIAS</h1>
 
-        <section class="selectorDeCategorias">
-            <ul>
-                <li>
-                    <a href="">
+            <div class="inicio__separador"></div>
+
+            <ul class="categories">
+                <li class="categories__li">
+                    <button class="btn__categories-all">
                         Todos los productos
-                    </a>
+                    </button>
                 </li>
-                <li>
-                    <a href="">
+                <li class="categories__li">
+                    <button class="btn__categories-formal">
                         Formal
-                    </a>
+                    </button>
                 </li>
-                <li>
-                    <a href="">
+                <li class="categories__li">
+                    <button class="btn__categories-casual">
                         Casual
-                    </a>
+                    </button>
                 </li>
-                <li>
-                    <a href="">
+                <li class="categories__li">
+                    <button class="btn__categories-deportivo">
                         Deportivo
-                    </a>
+                    </button>
                 </li>
             </ul>
         </section>
 
         <section class="productos">
-            <article class="targetaProducto">
-                <figure class="targetaProducto__figure">
-                    <img class="targetaProducto__figure__img" src="" alt="">
+            <div class="producto">
+                <figure class="producto__imagen">
+                    <img src="./assets/imgProductos/prueba.jpg" alt="">
                 </figure>
-                <div class="targetaProducto__inferior">
-                    <div class="">
-                        <h1>Titulo</h1>
-                        <h1></h1>
+                <div class="producto__cont__categoria-carrito">
+                    <div class="producto__categoria">
+                        <p>
+                            categoria
+                        </p>
                     </div>
-                    <div></div>
-                    <div></div>
+                    <button class="btn__producto__carrito">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </button>
                 </div>
-            </article>
+                <h1 class="producto__title">
+                    Ejemplo
+                </h1>
+                <p class="producto__descripcion">
+                    <strong>Descripción: </strong>${respuesta[i].descripcion}
+                </p>
+                <p class="producto__referencia">
+                    <strong>Referencia: </strong> ${respuesta[i].codigo}
+                </p>
+                <p class="producto_existencias">
+                    <strong>Existencia: </strong> ${respuesta[i].stock}
+                </p>
+                <p class="producto_precio">
+                    <strong class="precio">$ 140.000 </strong>
+                </p>
+                <button class="btn__producto">
+                    Comprar
+                </button>
+            </div>
+
+            <div class="producto">
+                <figure class="producto__imagen">
+                    <img src="./assets/imgProductos/prueba.jpg" alt="">
+                </figure>
+                <div class="producto__cont__categoria-carrito">
+                    <div class="producto__categoria">
+                        <p>
+                            categoria
+                        </p>
+                    </div>
+                    <button class="btn__producto__carrito">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </button>
+                </div>
+                <h1 class="producto__title">
+                    Ejemplo
+                </h1>
+                <p class="producto__descripcion">
+                    <strong>Descripción: </strong>${respuesta[i].descripcion}
+                </p>
+                <p class="producto__referencia">
+                    <strong>Referencia: </strong> ${respuesta[i].codigo}
+                </p>
+                <p class="producto_existencias">
+                    <strong>Existencia: </strong> ${respuesta[i].stock}
+                </p>
+                <p class="producto_precio">
+                    <strong class="precio">$ 140.000 </strong>
+                </p>
+                <button class="btn__producto">
+                    Comprar
+                </button>
+            </div>
+
+            <div class="producto">
+                <figure class="producto__imagen">
+                    <img src="./assets/imgProductos/prueba.jpg" alt="">
+                </figure>
+                <div class="producto__cont__categoria-carrito">
+                    <div class="producto__categoria">
+                        <p>
+                            categoria
+                        </p>
+                    </div>
+                    <button class="btn__producto__carrito">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </button>
+                </div>
+                <h1 class="producto__title">
+                    Ejemplo
+                </h1>
+                <p class="producto__descripcion">
+                    <strong>Descripción: </strong>${respuesta[i].descripcion}
+                </p>
+                <p class="producto__referencia">
+                    <strong>Referencia: </strong> ${respuesta[i].codigo}
+                </p>
+                <p class="producto_existencias">
+                    <strong>Existencia: </strong> ${respuesta[i].stock}
+                </p>
+                <p class="producto_precio">
+                    <strong class="precio">$ 140.000 </strong>
+                </p>
+                <button class="btn__producto">
+                    Comprar
+                </button>
+            </div>
+
+            <div class="producto">
+                <figure class="producto__imagen">
+                    <img src="./assets/imgProductos/prueba.jpg" alt="">
+                </figure>
+                <div class="producto__cont__categoria-carrito">
+                    <div class="producto__categoria">
+                        <p>
+                            categoria
+                        </p>
+                    </div>
+                    <button class="btn__producto__carrito">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </button>
+                </div>
+                <h1 class="producto__title">
+                    Ejemplo
+                </h1>
+                <p class="producto__descripcion">
+                    <strong>Descripción: </strong>${respuesta[i].descripcion}
+                </p>
+                <p class="producto__referencia">
+                    <strong>Referencia: </strong> ${respuesta[i].codigo}
+                </p>
+                <p class="producto_existencias">
+                    <strong>Existencia: </strong> ${respuesta[i].stock}
+                </p>
+                <p class="producto_precio">
+                    <strong class="precio">$ 140.000 </strong>
+                </p>
+                <button class="btn__producto">
+                    Comprar
+                </button>
+            </div>
+
         </section>
+
+        <button class="btn__return">
+            <ion-icon name="arrow-up-circle-outline"></ion-icon>
+        </button>
     </main>
 
     <footer>
@@ -447,17 +575,6 @@
     </footer>
 
     <script src="./scripts/app.js"></script>
-
-    <script language="text/Javascript">
-        cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-        function clearField(t) {                   //declaring the array outside of the
-            if (!cleared[t.id]) {                      // function makes it static and global
-                cleared[t.id] = 1;  // you could use true and false, but that's more typing
-                t.value = '';         // with more chance of typos
-                t.style.color = '#fff';
-            }
-        }
-    </script>
 
     <!-- Iconos -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
