se reduce el peso de imagenes y cambian algunas imagenes

--- a/index.html
+++ b/index.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-<html lang="Spanish">
+<html lang="es-MX">
     <head>
+        <!-- Metadatos básicos -->
+        <meta name="language" content="Español" />
         <meta charset="UTF-8" />
-        <link rel="icon" href="/logo.ico" />
-        <title>Romeliny</title>
-        <meta name="DateCreated" content="Sun, 21 August 2022 00:00:00 GMT+1" />
-        <meta name="author" content="Jeisson Alexander Gavilán Murcia | Romeliny" />
-        <meta name="REPLY-TO" content="calzadoromeliny2004@gmail.com" />
-        <link rev="made" href="mailto:calzadoromeliny2004@gmail.com" />
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="language" content="Español" />
-        <meta name="DC.Language" scheme="RFC1766" content="Spanish" />
+        <title>Romeliny | Calzado elegante y cómodo</title>
+        <link rel="icon" href="/romeliny.ico" />
+        <meta name="author" content="Jeisson Alexander Gavilán Murcia | Angie Liliana Camargo Hernandez" />
+        <meta name="copyright" content="Romeliny" />
+        <meta name="publisher" content="Romeliny" />
+        <meta name="DateCreated" content="Sun, 21 August 2022 00:00:00 GMT+1" />
+        <meta
+            name="description"
+            content="Nuestros zapatos están diseñados para brindar elegancia y comodidad al pueblo colombiano. Somos una empresa dedicada a la fabricación de calzado elegante."
+        />
+        <meta
+            name="keywords"
+            content="calzado, Romeliny, zapatos elegantes, zapatos formales, calzado elegante, calzado formal, calzado de calidad, tallas de zapatos, zapatos para hombres, zapatos para mujeres, tienda online de calzado, zapatos para colegio, zapatos negros, moda en calzado"
+        />
+
+        <!-- Metadatos complementarios -->
+        <meta name="robots" content="index,follow" />
+        <meta name="REPLY-TO" content="calzadoromeliny2004@gmail.com" />
         <meta name="geo.region" content="CO" />
         <meta name="geo.placename" content="Bogotá, Cundinamarca" />
         <meta name="geo.position" content="4.587403;-74.106349" />
         <meta name="ICBM" content="4.587403, -74.106349" />
-        <meta name="og:title" content="Romeliny" />
-        <meta
-            name="og:description"
-            content="Somos una empresa colombiana dedicada a la fabricación de calzado elegante, cómodo y de alta calidad. Nuestros zapatos están diseñados para brindar elegancia y comodidad al pueblo colombiano."
-        />
-        <meta
-            name="description"
-            content="Somos una empresa colombiana dedicada a la fabricación de calzado elegante, cómodo y de alta calidad. Nuestros zapatos están diseñados para brindar elegancia y comodidad al pueblo colombiano."
-        />
-        <meta
-            name="keywords"
-            content="calzado, Romeliny, zapatos elegantes, zapatos, elegante, formal, calzado elegante, Restrepo, calzado Restrepo, calidad, calzado de calidad, tallas de zapatos, zapatos hombre, zapatos mujer, tienda online, zapatos para colegio, zapatos negros"
-        />
-        <meta name="og:url" content="www.romeliny.com" />
-        <meta name="Resource-type" content="Homepage" />
+
+        <!-- Metadatos para compartir en redes -->
+        <meta name="og:url" content="https://romeliny.com/" />
         <meta name="og:type" content="website" />
         <meta name="og:site_name" content="romeliny" />
-        <meta name="robots" content="index, follow" />
+        <meta property="og:title" content="Romeliny | Calzado elegante y cómodo" />
+        <meta name="twitter:title" content="Romeliny | Calzado elegante y cómodo" />
+        <meta property="og:image" content="/romeliny-social-share.png" />
+        <meta
+            property="og:description"
+            content="Nuestros zapatos están diseñados para brindar elegancia y comodidad al pueblo colombiano. Somos una empresa dedicada a la fabricación de calzado elegante."
+        />
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -48,13 +55,13 @@
         <script type="module" src="/src/main.jsx"></script>
 
         <!-- Tabla de graficos -->
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <!--  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 
         <!-- Iconos -->
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
         <!-- Graficos Tiempo real -->
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> -->
     </body>
 </html>
